--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "next": "^14.2.5",
